/// @license Propriety <http://license.url>
/// @copyright Copyright (C) Turbo Labz 2017 - All rights reserved
/// Unauthorized copying of this file, via any medium is strictly prohibited
/// Proprietary and confidential
/// 
/// @author Mubeen Iqbal <mubeen@turbolabz.com>
/// @company Turbo Labz <http://turbolabz.com>
/// @date 2017-03-30 17:25:01 UTC+05:00
/// 
/// @description
/// [add_description_here]

namespace TurboLabz.Gamebet
{
    public static class AnimationConstants
    {
        public static class Matchmaking
        {
            public const string FIND_MATCH = "FindMatch";
            public const string MATCH_FOUND = "MatchFound";
        }

        public static class EndGame
        {
            public const string ANNOUNCE_PLAYER_WINNER = "AnnouncePlayerWinner";
            public const string ANNOUNCE_OPPONENT_WINNER = "AnnounceOpponentWinner";
            public const string ANNOUNCE_DRAW = "AnnounceDraw";
            public const string REWARD_PLAYER = "RewardPlayer";
            public const string REWARD_OPPONENT = "RewardOpponent";
            public const string REWARD_BOTH = "RewardBoth";
            public const string SHOW_BUTTONS = "ShowButtons";
        }
    }
}
